syntax = "proto3";

package walfie.gbf.raidfinder.protocol;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  preamble: "sealed trait Request"
  single_file: true
};

message RequestMessage {
  oneof data {
    RaidBossesRequest raidBossesMessage = 1;
    SubscribeRequest subscribeMessage = 2;
    UnsubscribeRequest unsubscribeMessage = 3;
  };
};

message RaidBossesRequest {
  option (scalapb.message).extends = "Request";
};

message SubscribeRequest {
  option (scalapb.message).extends = "Request";

  repeated string bossNames = 1;
};

message UnsubscribeRequest {
  option (scalapb.message).extends = "Request";

  repeated string bossNames = 1;
};

